--- a/loginn.html
+++ b/loginn.html
@@ -29,8 +29,9 @@ input{
     width: 250px;
     height: 30px;
 }
-    </style>
 
+    </style>
+<body style="background-color: #FFFAEF;">
 </head>
 <body>
     <form>
@@ -38,9 +39,10 @@ input{
 <h3>Login</h3>
 <input type="text" placeholder="Login" id="login">
 <input type="password" placeholder="Senha" id="senha">
-<input type="submit" onclick="logar(); return false">
-
-    </form>
+<input type="submit" style="background-color: #024223; color: #F3BC33; padding: 10px; border: none; cursor: pointer;" onclick="logar(); return false">
+<a href="cadastro.html" style="color: #024223; text-decoration: none;">Cadastre-se</a>
+    
+</form>
 
     <script>
 
