--- a/estilo.html
+++ b/estilo.html
@@ -20,11 +20,11 @@
     <h1>Bem-Vindo!</h1>
   </header>
   <main>
-    <form action="login.php" method="post">
+    <form action="loginn.html" method="post">
       <input type="text" placeholder="Nome de usuário" name="username" style="width: 100%; padding: 10px; border: 1px solid #024223;">
       <input type="password" placeholder="Senha" name="password" style="width: 100%; padding: 10px; border: 1px solid #024223;">
       <input type="submit" value="Login" style="background-color: #024223; color: #F3BC33; padding: 10px; border: none; cursor: pointer;">
-      <a href="cadastro.php" style="color: #024223; text-decoration: none;">Cadastre-se</a>
+      <a href="cadastro.html" style="color: #024223; text-decoration: none;">Cadastre-se</a>
     </form>  
   </main>
 </body>
